kube/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: multi-stromae
  annotations:
    kubernetes.io/ingress.class: nginx
    kubernetes.io/tls-acme: "true"
spec:
  tls:
    - hosts:
        - multi-stromae.dev.insee.io
  rules:
    - host: multi-stromae.dev.insee.io
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: multi-stromae
                port:
                  number: 80
